--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h2>ini adalah judul</h2>
+    <h1>ini adalah judul</h1>
+    <h2>ini adalah sub judul</h2>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor sapiente
       debitis tempore commodi libero accusamus provident nulla alias ullam qui
