--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>ini adalah judul</h1>
+    <h1>ini adalah judul dua</h1>
     <h2>ini adalah sub judul</h2>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor sapiente
